--- a/posit_conf_prez.qmd
+++ b/posit_conf_prez.qmd
@@ -8,15 +8,19 @@ format:
 editor: source
 ---
 
+
 # Topics
 
 -   Background
 -   R & Python
 -   Communication of Results
+-   DuckDB 
 -   Pharma Landscape
--   Resources
+-   Resources & References
+
 
 # Background
+
 
 ## Background
 
@@ -29,6 +33,7 @@ editor: source
     -   Engineering
     -   Academia
 :::
+
 
 ## Focus
 
@@ -49,12 +54,15 @@ editor: source
 :::
 :::
 
+
 # R & Python
+
 
 ## Background
 
 -   Data scientists are often caught in-between R and Python
 -   Each has pros and cons, and may need to be utilized together
+
 
 ## Polars
 
@@ -62,6 +70,7 @@ editor: source
 -   Allows for dplyr-like syntax in python
 -   Alternative to *pandas* in python
 -   Fast
+
 
 ```{r}
 #| include: false 
@@ -81,7 +90,8 @@ import pyarrow as pa
 
 ```
 
-------------------------------------------------------------------------
+
+---
 
 ```{r}
 #| label: R 
@@ -121,10 +131,12 @@ print(py_output_table)
 
 ```
 
+
 ## Quarto documents
 
 -   Integrate python, R, Julia, Observable code in 1 document
 -   Create output with text, code, graphs, tables, pictures, etc.
+
 
 ## Render Python
 
@@ -151,6 +163,7 @@ for name in ['Jenny', 'Ariel', 'Yuval']:
   print(name_vowel_list)
       
 ```
+
 
 ## And R (in the same document)
 
@@ -183,7 +196,9 @@ ggplot(diamonds, aes(x = carat, y = price, color = color)) +
 
 ```
 
+
 # Communication of Results
+
 
 ## Quarto
 
@@ -191,17 +206,21 @@ ggplot(diamonds, aes(x = carat, y = price, color = color)) +
 -   Create output with text, code, graphs, tables, pictures, etc.
 -   Output in many formats (PDF, dashboard, website, presentation) with minimal editing
 
+
 ## Quarto: Documents
 
 ![](posit_conf_prez_files/image_document.png)
+
 
 ## Quarto: Dashboards
 
 ![](posit_conf_prez_files/image_dashboard.png)
 
+
 ## Quarto: Websites
 
 [Quarto website](https://quarto.org/)
+
 
 ## Quarto: Presentations
 
@@ -238,6 +257,7 @@ editor: visual
 :::
 ```
 
+
 ## Formatting tables for publication
 
 `gt`
@@ -255,6 +275,7 @@ editor: visual
 -   Separates formatting and labeling from data
 -   Allows for easy post-production changes such as decimal points and labels
 
+
 ## Example: `gtsummary`
 
 ```{r}
@@ -267,6 +288,7 @@ trial |>
   tbl_summary(
     by = 'trt')
 ```
+
 
 ## Dashboards
 
@@ -282,7 +304,29 @@ Can mix and match `quarto` and `shiny` components
 
 [GDP and Life Expectancy](https://jjallaire.github.io/gapminder-dashboard/)
 
+
+# DuckDB 
+
+
+## 
+
+
+```{r}
+
+library(DBI)
+
+con = dbConnect()
+df = dbGetQuery(con, "SELECT * FROM")
+
+
+
+library(duckdb)
+
+```
+
+
 # Pharma Landscape
+
 
 ## Technical side
 
@@ -294,27 +338,57 @@ wc_data_tech = data.frame(
   word = c('CI/CD', 'duckDB', 'Apache Arrow', 'Python', 'R', 
            'Quarto', 'GenAI', 'DevOps', 'API', 'Kernel', 
            'Cluster', 'Databricks', 'Open Source', 'Parquet', 'Quarto',
-           'Shiny', ),
+           'Shiny', 'Git', 'Interactive'),
   times = c(10, 2, 2, 15, 5, 
             3, 27, 20, 16, 10, 
             15, 6, 30, 10, 5, 
-            10))
+            10, 100, 20))
 
 set.seed(1234)
-wordcloud(words = wc_data_tech$word, freq = wc_data_tech$times, min.freq = 1, max.words=200, random.order=FALSE, rot.per=0.35,            colors=brewer.pal(8, "Dark2"))
+wordcloud(words = wc_data_tech$word, freq = wc_data_tech$times, min.freq = 1, max.words=200, random.order=FALSE, rot.per=0,            colors=brewer.pal(8, "Dark2"))
+
+```
+
+
+## Research Side 
+
+```{r}
 
 wc_data_research = data.frame(
   word = c('Dashboard', 'R', 'SAS', 'Tables', 'Python', 
            'Statistical Computing Environment', 'Plots', 'Excel', 'Microsoft Word', 'Statistical Modeling',
-           'Enterprise'),
+           'Enterprise', 'Stata', 'SPSS'),
   times = c(10, 12, 100, 50, 2,
             8, 18, 40, 70, 20,
-            15))
+            15, 30, 20))
 
 set.seed(1234)
 wordcloud(words = wc_data_research$word, freq = wc_data_research$times, min.freq = 1, max.words=200, random.order=FALSE, rot.per=0.35,            colors=brewer.pal(8, "Dark2"))
 
 ```
-## Research side
 
-# Resources
+
+## Resources & References
+
+::: columns
+::: {.column width="50%"}
+
+- [Presentation Git Repo](https://github.com/jrdusendang/presentations)
+- [posit::conf(2024)](https://posit.co/conference/)
+- [Posit website](https://posit.co/)
+
+:::
+::: {.column width="50%"}
+
+- [DuckDB](https://duckdb.org/) 
+- [duckplyr](https://duckdb.org/2024/04/02/duckplyr.html) 
+- [gt](https://gt.rstudio.com/) 
+- [gtsummary](https://www.danieldsjoberg.com/gtsummary/)
+- [Polars](https://docs.pola.rs/) 
+- [quarto](https://quarto.org/) 
+- [Shiny](https://shiny.posit.co/)
+- [tfrmt](https://gsk-biostatistics.github.io/tfrmt/articles/examples.html) 
+
+:::
+:::
+
